Init customization by @JuneKimDev

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="kr" className="no-js">
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
